Fix copy issues: Vytelle description and location names
- Change EmbryoLabs to Vytelle with accurate cattle genetics description
- Replace "IVF clinics/embryologists" with "livestock specialists"
- Update all language variants (EN/PT/ES)
- Standardize "Sao Paulo" to "São Paulo"
- Mark HerdU as current (isCurrent: true)

--- a/public/data/translations/en.json
+++ b/public/data/translations/en.json
@@ -55,19 +55,19 @@
 
   "experience.embryolabs-2024.location.label": "Remote",
   "experience.embryolabs-2024.roles.embryolabs-tech-lead.title": "Tech Lead & Full-Stack Developer",
-  "experience.embryolabs-2024.description.cv": "Architected and developed an AI-powered embryo classification platform for IVF clinics, helping embryologists assess embryo quality using deep learning models.",
-  "experience.embryolabs-2024.description.coverLetter": "Architected and built an AI-powered embryo classification platform for IVF clinics from scratch. I designed video processing pipelines that achieved a 68% reduction in processing time, developed a novel multi-score frame selection algorithm, and implemented dual deployment strategies for cloud and on-premise installations.",
-  "experience.embryolabs-2024.description.portfolio": "Architected and developed an AI-powered embryo classification platform for IVF clinics, helping embryologists assess embryo quality using deep learning models.",
-  "experience.embryolabs-2024.achievements.embryolabs-1.cv": "Built complete platform from scratch: admin dashboard, embryologist application, RESTful API backend, and real-time video processing pipeline.",
-  "experience.embryolabs-2024.achievements.embryolabs-1.portfolio": "Built complete platform from scratch: admin dashboard, embryologist application, RESTful API, and real-time video processing pipeline.",
+  "experience.embryolabs-2024.description.cv": "Architected and developed an AI-powered bovine embryo classification platform for Vytelle, a leading cattle genetics company, helping livestock specialists assess embryo quality using deep learning models to accelerate genetic progress in breeding programs.",
+  "experience.embryolabs-2024.description.coverLetter": "Architected and built an AI-powered cattle embryo classification platform for Vytelle from scratch. I designed video processing pipelines that achieved a 68% reduction in processing time, developed a novel multi-score frame selection algorithm, and implemented dual deployment strategies for cloud and on-premise installations.",
+  "experience.embryolabs-2024.description.portfolio": "Architected and developed an AI-powered bovine embryo classification platform for Vytelle, helping livestock specialists assess embryo quality using deep learning models to accelerate genetic progress in breeding programs.",
+  "experience.embryolabs-2024.achievements.embryolabs-1.cv": "Built complete platform from scratch: admin dashboard, specialist grading application, RESTful API backend, and real-time video processing pipeline.",
+  "experience.embryolabs-2024.achievements.embryolabs-1.portfolio": "Built complete platform from scratch: admin dashboard, specialist grading application, RESTful API, and real-time video processing pipeline.",
   "experience.embryolabs-2024.achievements.embryolabs-2.cv": "Achieved 68% reduction in video processing time (13.2s to 4.2s) through algorithm optimization and parallel processing.",
   "experience.embryolabs-2024.achievements.embryolabs-2.portfolio": "Achieved 68% reduction in video processing time (13.2s to 4.2s) through algorithm optimization and parallel processing.",
   "experience.embryolabs-2024.achievements.embryolabs-3.cv": "Developed novel multi-score algorithm using Laplacian variance, circularity scoring, texture analysis (LBP entropy), and KMeans clustering.",
   "experience.embryolabs-2024.achievements.embryolabs-3.portfolio": "Developed novel multi-score frame selection algorithm using Laplacian variance, circularity scoring, texture analysis, and KMeans clustering.",
-  "experience.embryolabs-2024.achievements.embryolabs-4.cv": "Implemented Azure cloud for demos, on-premise GPU-accelerated servers for clinic production.",
-  "experience.embryolabs-2024.achievements.embryolabs-4.portfolio": "Implemented dual deployment strategy: Azure cloud for demos, on-premise GPU-accelerated servers for clinic production.",
-  "experience.embryolabs-2024.achievements.embryolabs-5.cv": "Designed system enabling embryologists to correct classifications for model retraining.",
-  "experience.embryolabs-2024.achievements.embryolabs-5.portfolio": "Designed feedback collection system enabling embryologists to correct classifications for model retraining.",
+  "experience.embryolabs-2024.achievements.embryolabs-4.cv": "Implemented Azure cloud for demos, on-premise GPU-accelerated servers for production facilities.",
+  "experience.embryolabs-2024.achievements.embryolabs-4.portfolio": "Implemented dual deployment strategy: Azure cloud for demos, on-premise GPU-accelerated servers for production facilities.",
+  "experience.embryolabs-2024.achievements.embryolabs-5.cv": "Designed system enabling specialists to correct classifications for model retraining.",
+  "experience.embryolabs-2024.achievements.embryolabs-5.portfolio": "Designed feedback collection system enabling specialists to correct classifications for model retraining.",
 
   "experience.nubank-2022.roles.nubank-consultant.title": "Product Innovation & Gamification Consultant",
   "experience.nubank-2022.description.cv": "Consulted on Nubank's Client Loyalty MVP, applying gamification expertise to enhance user engagement and product-market fit.",
