--- a/public/data/translations/pt.json
+++ b/public/data/translations/pt.json
@@ -55,19 +55,19 @@
 
   "experience.embryolabs-2024.location.label": "Remoto",
   "experience.embryolabs-2024.roles.embryolabs-tech-lead.title": "Tech Lead & Desenvolvedor Full-Stack",
-  "experience.embryolabs-2024.description.cv": "Arquitetei e desenvolvi uma plataforma de classificação de embriões com IA para clínicas de FIV, ajudando embriologistas a avaliar a qualidade de embriões usando modelos de deep learning.",
-  "experience.embryolabs-2024.description.coverLetter": "Arquitetei e construí do zero uma plataforma de classificação de embriões com IA para clínicas de FIV. Projetei pipelines de processamento de vídeo que alcançaram 68% de redução no tempo de processamento, desenvolvi um novo algoritmo de seleção de frames multi-score e implementei estratégias de deployment duplo para instalações em nuvem e on-premise.",
-  "experience.embryolabs-2024.description.portfolio": "Arquitetei e desenvolvi uma plataforma de classificação de embriões com IA para clínicas de FIV, ajudando embriologistas a avaliar a qualidade de embriões usando modelos de deep learning.",
-  "experience.embryolabs-2024.achievements.embryolabs-1.cv": "Construí plataforma completa do zero: dashboard administrativo, aplicação para embriologistas, API RESTful backend e pipeline de processamento de vídeo em tempo real.",
-  "experience.embryolabs-2024.achievements.embryolabs-1.portfolio": "Construí plataforma completa do zero: dashboard administrativo, aplicação para embriologistas, API RESTful e pipeline de processamento de vídeo em tempo real.",
+  "experience.embryolabs-2024.description.cv": "Arquitetei e desenvolvi uma plataforma de classificação de embriões bovinos com IA para a Vytelle, empresa líder em genética bovina, ajudando especialistas em pecuária a avaliar a qualidade de embriões usando modelos de deep learning para acelerar o progresso genético em programas de melhoramento.",
+  "experience.embryolabs-2024.description.coverLetter": "Arquitetei e construí do zero uma plataforma de classificação de embriões bovinos com IA para a Vytelle. Projetei pipelines de processamento de vídeo que alcançaram 68% de redução no tempo de processamento, desenvolvi um novo algoritmo de seleção de frames multi-score e implementei estratégias de deployment duplo para instalações em nuvem e on-premise.",
+  "experience.embryolabs-2024.description.portfolio": "Arquitetei e desenvolvi uma plataforma de classificação de embriões bovinos com IA para a Vytelle, ajudando especialistas em pecuária a avaliar a qualidade de embriões usando modelos de deep learning para acelerar o progresso genético em programas de melhoramento.",
+  "experience.embryolabs-2024.achievements.embryolabs-1.cv": "Construí plataforma completa do zero: dashboard administrativo, aplicação de classificação para especialistas, API RESTful backend e pipeline de processamento de vídeo em tempo real.",
+  "experience.embryolabs-2024.achievements.embryolabs-1.portfolio": "Construí plataforma completa do zero: dashboard administrativo, aplicação de classificação para especialistas, API RESTful e pipeline de processamento de vídeo em tempo real.",
   "experience.embryolabs-2024.achievements.embryolabs-2.cv": "Alcancei 68% de redução no tempo de processamento de vídeo (13.2s para 4.2s) através de otimização de algoritmos e processamento paralelo.",
   "experience.embryolabs-2024.achievements.embryolabs-2.portfolio": "Alcancei 68% de redução no tempo de processamento de vídeo (13.2s para 4.2s) através de otimização de algoritmos e processamento paralelo.",
   "experience.embryolabs-2024.achievements.embryolabs-3.cv": "Desenvolvi novo algoritmo multi-score usando variância Laplaciana, pontuação de circularidade, análise de textura (entropia LBP) e clustering KMeans.",
   "experience.embryolabs-2024.achievements.embryolabs-3.portfolio": "Desenvolvi novo algoritmo de seleção de frames multi-score usando variância Laplaciana, pontuação de circularidade, análise de textura e clustering KMeans.",
-  "experience.embryolabs-2024.achievements.embryolabs-4.cv": "Implementei Azure cloud para demos, servidores on-premise com aceleração GPU para produção em clínicas.",
-  "experience.embryolabs-2024.achievements.embryolabs-4.portfolio": "Implementei estratégia de deployment duplo: Azure cloud para demos, servidores on-premise com aceleração GPU para produção em clínicas.",
-  "experience.embryolabs-2024.achievements.embryolabs-5.cv": "Projetei sistema permitindo que embriologistas corrijam classificações para retreinamento do modelo.",
-  "experience.embryolabs-2024.achievements.embryolabs-5.portfolio": "Projetei sistema de coleta de feedback permitindo que embriologistas corrijam classificações para retreinamento do modelo.",
+  "experience.embryolabs-2024.achievements.embryolabs-4.cv": "Implementei Azure cloud para demos, servidores on-premise com aceleração GPU para instalações de produção.",
+  "experience.embryolabs-2024.achievements.embryolabs-4.portfolio": "Implementei estratégia de deployment duplo: Azure cloud para demos, servidores on-premise com aceleração GPU para instalações de produção.",
+  "experience.embryolabs-2024.achievements.embryolabs-5.cv": "Projetei sistema permitindo que especialistas corrijam classificações para retreinamento do modelo.",
+  "experience.embryolabs-2024.achievements.embryolabs-5.portfolio": "Projetei sistema de coleta de feedback permitindo que especialistas corrijam classificações para retreinamento do modelo.",
 
   "experience.nubank-2022.roles.nubank-consultant.title": "Consultor de Inovação de Produto e Gamificação",
   "experience.nubank-2022.description.cv": "Consultoria no MVP de Fidelização de Clientes do Nubank, aplicando expertise em gamificação para aumentar o engajamento de usuários e product-market fit.",
